--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ buildscript {
 
 		maven {
 			name = "SpongePowered"
-			url = "http://repo.spongepowered.org/maven"
+			url = "https://repo.spongepowered.org/repository/maven-public/"
 		}
 
 		maven {
@@ -15,7 +15,7 @@ buildscript {
 	dependencies {
 		classpath "net.minecraftforge.gradle:ForgeGradle:2.3-SNAPSHOT"
 		classpath "com.github.jengelman.gradle.plugins:shadow:1.2.3"
-		classpath "org.spongepowered:mixingradle:0.4-SNAPSHOT"
+		classpath "org.spongepowered:mixingradle:0.6-SNAPSHOT"
 	}
 }
 
@@ -39,7 +39,7 @@ minecraft {
 repositories {
 	maven {
 		name = "spongepowered-repo"
-		url  = "http://repo.spongepowered.org/maven/"
+		url  = "https://repo.spongepowered.org/repository/maven-public/"
 	}
 
 	maven {
