--- a/build.gradle
+++ b/build.gradle
@@ -56,9 +56,12 @@ repositories {
 }
 
 dependencies {
-	compile "club.minnced:java-discord-rpc:v2.0.1" // Discord rpc.
+	implementation 'org.jetbrains:annotations:20.1.0'
+    compile "club.minnced:java-discord-rpc:v2.0.1" // Discord rpc.
 
 	compile group : "net.jodah", name : "typetools",   version: "0.5.0" // TypeTools.
+
+	compile 'se.michaelthelin.spotify:spotify-web-api-java:6.5.1'
 
 	compile("org.spongepowered:mixin:0.7.4-SNAPSHOT") { // Somes others.
 		exclude module: "launchwrapper"
@@ -74,6 +77,7 @@ shadowJar {
 		include(dependency("org.javassist:javassist"))
 		include(dependency("org.spongepowered:mixin"))
 		include(dependency("net.jodah:typetools"))
+		include(dependency('se.michaelthelin.spotify:spotify-web-api-java:6.5.1'))
 	}
 }
 
