--- a/build.gradle
+++ b/build.gradle
@@ -56,18 +56,17 @@ repositories {
 }
 
 dependencies {
-	implementation 'org.jetbrains:annotations:20.1.0'
-    compile "club.minnced:java-discord-rpc:v2.0.1" // Discord rpc.
+	implementation "org.jetbrains:annotations:20.1.0"
 
-	compile group : "net.jodah", name : "typetools",   version: "0.5.0" // TypeTools.
-
+    compile "club.minnced:java-discord-rpc:v2.0.1"
+	compile group : "net.jodah", name : "typetools", version: "0.5.0"
 	compile 'se.michaelthelin.spotify:spotify-web-api-java:6.5.1'
+	compile 'com.google.code.gson:gson:2.8.2'
 
-	compile("org.spongepowered:mixin:0.7.4-SNAPSHOT") { // Somes others.
+	compile("org.spongepowered:mixin:0.7.4-SNAPSHOT") {
 		exclude module: "launchwrapper"
 		exclude module: "commons-io"
 		exclude module: "guava"
-		exclude module: "gson"
 	}
 }
 
@@ -77,6 +76,7 @@ shadowJar {
 		include(dependency("org.javassist:javassist"))
 		include(dependency("org.spongepowered:mixin"))
 		include(dependency("net.jodah:typetools"))
+		include(dependency("com.google.code.gson:gson"))
 		include(dependency('se.michaelthelin.spotify:spotify-web-api-java:6.5.1'))
 	}
 }
