--- a/gradle.properties
+++ b/gradle.properties
@@ -5,4 +5,4 @@ org.gradle.jvmargs =-Xmx3G
 clientName = Rocan
 clientVersion = 1.2.9
 clientGroup = me.rina.rocan
-clientBaseName = rocan
+clientBaseName = rocan55
