--- a/gradle.properties
+++ b/gradle.properties
@@ -3,6 +3,6 @@ org.gradle.jvmargs =-Xmx3G
 
 # Client stuff.
 clientName = Rocan
-clientVersion = 1.2.10
+clientVersion = 1.3.0beta
 clientGroup = me.rina.rocan
 clientBaseName = rocan55
