--- a/build.gradle
+++ b/build.gradle
@@ -61,12 +61,14 @@ dependencies {
     compile "club.minnced:java-discord-rpc:v2.0.1"
 	compile group : "net.jodah", name : "typetools", version: "0.5.0"
 	compile 'se.michaelthelin.spotify:spotify-web-api-java:6.5.1'
-	compile 'com.google.code.gson:gson:2.8.1'
+
+	compile group: "com.googlecode.json-simple", name: "json-simple", version: "1.1.1"
 
 	compile("org.spongepowered:mixin:0.7.4-SNAPSHOT") {
 		exclude module: "launchwrapper"
 		exclude module: "commons-io"
 		exclude module: "guava"
+		exclude module: "gson"
 	}
 }
 
@@ -78,6 +80,7 @@ shadowJar {
 		include(dependency("net.jodah:typetools"))
 		include(dependency("com.google.code.gson:gson"))
 		include(dependency('se.michaelthelin.spotify:spotify-web-api-java:6.5.1'))
+		include(dependency("com.googlecode.json-simple:json-simple:1.1.1"))
 	}
 }
 
