--- a/build.gradle
+++ b/build.gradle
@@ -19,8 +19,8 @@ buildscript {
 	}
 }
 
-apply plugin: "net.minecraftforge.gradle.forge";
-apply plugin: "com.github.johnrengelman.shadow";
+apply plugin: "net.minecraftforge.gradle.forge"
+apply plugin: "com.github.johnrengelman.shadow"
 apply plugin: "org.spongepowered.mixin"
 
 version project.clientVersion
@@ -57,10 +57,8 @@ repositories {
 
 dependencies {
 	implementation "org.jetbrains:annotations:20.1.0"
-	implementation group: 'com.google.code.gson', name: 'gson', version: '2.8'
 
-    compile "club.minnced:java-discord-rpc:v2.0.1"
-	compile 'se.michaelthelin.spotify:spotify-web-api-java:6.5.1'
+	compile "club.minnced:java-discord-rpc:v2.0.1"
 	compile group : "net.jodah", name : "typetools", version: "0.5.0"
 
 	compile("org.spongepowered:mixin:0.7.4-SNAPSHOT") {
@@ -77,9 +75,6 @@ shadowJar {
 		include(dependency("org.javassist:javassist"))
 		include(dependency("org.spongepowered:mixin"))
 		include(dependency("net.jodah:typetools"))
-		include(dependency("com.google.code.gson:gson"))
-		include(dependency('se.michaelthelin.spotify:spotify-web-api-java:6.5.1'))
-		include(dependency("com.googlecode.json-simple:json-simple:1.1.1"))
 	}
 }
 
@@ -109,7 +104,7 @@ processResources {
 		exclude "mcmod.info"
 	}
 
-	rename "(.+_at.cfg)", 'META-INF/$1';
+	rename "(.+_at.cfg)", 'META-INF/$1'
 }
 
 jar {
